# alacritty

./: Cargo.toml
.github/workflows/: upload_asset.sh
alacritty/res/glsl3/: text.f.glsl
alacritty/src/: display.rs  event.rs  logging.rs  window.rs  window_context.rs
alacritty/src/display/: mod.rs  renderer_context.rs  window.rs
alacritty/src/renderer/: mod.rs
alacritty/src/renderer/text/: atlas.rs  gles2.rs  glsl3.rs
alacritty/windows/wix/: alacritty.wxs
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: event_loop.rs
alacritty_terminal/src/tty/: mod.rs  unix.rs
alacritty_terminal/src/tty/windows/: blocking.rs  child.rs  conpty.rs  mod.rs
res/: text.f.glsl
