[workspace]
members = [
    "alacritty",
    "alacritty_terminal",
    "alacritty_config",
    "alacritty_config_derive",
]

[profile.release]
lto = "thin"
debug = 1
incremental = false
panic = "abort"

[patch.crates-io]
winit = { git = "https://github.com/kchibisov/winit", branch = "update-wayland-rs-0.30" }
